--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,15 @@
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
-			<artifactId>elk-owlapi-standalone</artifactId>
+			<artifactId>elk-owlapi</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 			<classifier>bin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.semanticweb.elk</groupId>
+			<artifactId>elk-standalone</artifactId>
+			<version>0.5.0-SNAPSHOT</version>
+			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
