--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>4.1.3</version>
+			<version>4.2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
@@ -45,6 +45,11 @@
 			<artifactId>elk-standalone</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.liveontologies</groupId>
+			<artifactId>proof-utils</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -73,6 +78,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
