--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.liveontologies</groupId>
-			<artifactId>proof-utils</artifactId>
+			<artifactId>puli</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
