--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<version>20.0</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sourceforge.argparse4j</groupId>
+			<artifactId>argparse4j</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
