--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
-			<artifactId>elk-standalone</artifactId>
+			<artifactId>elk-owl-parsing-javacc</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
-			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.semanticweb.elk</groupId>
+			<artifactId>elk-reasoner</artifactId>
+			<version>0.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
