--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,10 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INGO, stdout
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %-5r [%t] %-5p %c %x - %m%n
+
+log4j.category.org.semanticweb.elk.reasoner=WARN
+log4j.category.org.semanticweb.elk.reasoner.stages.AbstractReasonerStage=INFO
+log4j.category.org.semanticweb.elk.reasoner.tracing.TraceState=INFO
