--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<version>0.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.nanohttpd</groupId>
+			<artifactId>nanohttpd</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>20.0</version>
@@ -121,9 +126,26 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>pl.project13.maven</groupId>
+				<artifactId>git-commit-id-plugin</artifactId>
+				<version>2.2.3</version>
+				<executions>
+					<execution>
+						<id>get-the-git-infos</id>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>3.1.0</version>
 				<configuration>
+					<finalName>${project.artifactId}-${project.version}-${git.commit.id.abbrev}</finalName>
 					<archive>
 						<manifest>
 							<mainClass>org.liveontologies.pinpointing.RunJustificationExperiments</mainClass>
