--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,15 @@
-log4j.rootLogger=INGO, stdout
+log4j.rootLogger=INFO, stdout, stderr
 
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern = %-5r [%t] %-5p %c %x - %m%n
+
+log4j.appender.stderr = org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.Threshold = ERROR
+log4j.appender.stderr.Target = System.err
+log4j.appender.stderr.layout = org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern = %-5r [%t] %-5p %c %x - %m%n
 
 log4j.category.org.semanticweb.elk.reasoner=WARN
 log4j.category.org.semanticweb.elk.reasoner.stages.AbstractReasonerStage=INFO
