--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,11 @@
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>4.2.7</version>
+			<version>5.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.semanticweb.elk</groupId>
-			<artifactId>elk-owlapi</artifactId>
+			<artifactId>elk-owlapi5</artifactId>
 			<version>0.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
